C structs (#16)
* Carrying binary definitions across from v2

* Small basic struct test works again.

* enough struct for now.

* Reorg a bit.

* JNA ffi partially implemented.

* Defining a static library class is now possible for JNA.

* Reworking codegen a bit.

* One major step forward

* Dynamically creating C functions

* External interface work.

* First ffi test passing...that was a lot of work.

* Inching close to full mmodel impl.

* Working unit tests across 2 ffi systems

* ns cleanup

* format fix